# beyond_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
beyond_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: __init__.py  logistics.py  queries.py
src/collators/: __init__.py  aya_dpo_collator.py  ayacollator.py  dpo_data.py  dpo_inference_collator.py  gemma3_collator.py  gemma3_dpo_collator.py  inference_collator.py  llama32_collator.py  llama32_dpo_collator.py  qwen3_collator.py  qwen3_dpo_collator.py
src/cot/: __init__.py  build_target.py
src/data_generation/: __init__.py  build_publish.py  clean_dataset.py  dpo_build_publish.py  dpo_creation.py  notes.md  openai_gen.py  redeval.py  redeval_oai_gen.py  sarcasm_curation_prompt.py
src/datasets/: __init__.py  loader.py  verification.py
src/eval/: classification.py  dataset_card.py  datastats.py  dpo_data_card.py  farge.py  nlp_metrics.py  parsing.py
src/hf/: publish_lora_models.py
src/inference/: run_inference.py
src/negatives/: gen_rejected.py  notes.md
src/test/: test_aya_collator.py  test_aya_dpo_collator.py  test_build_publish.py  test_collator_maxlen.py  test_collator_smoke.py  test_dpo_data.py  test_dpo_inference_collators.py  test_freeform_sft.py  test_gemma3_collator.py  test_gemma3_dpo_collator.py  test_gen_rejected.py  test_inference_ood_generation.py  test_llama32_collator.py  test_llama32_dpo_collator.py  test_llama32_dpo_trainer_smoke.py  test_openai_gen.py  test_qwen3_collator.py  test_qwen3_dpo_collator.py  test_qwen3_dpo_trainer_smoke.py  test_redeval_oai_gen.py  (+2 more)
(+44 files in other folders)
